--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,73 +20,23 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [07/Aug/2023 15:49:21] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:49:22] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:49:22] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:52:56] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:52:56] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:52:56] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:53:15] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:53:15] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:53:15] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:54:49] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:54:49] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:54:49] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:55:12] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:55:12] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:55:12] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:55:45] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:55:45] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:55:45] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:56:46] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:57:16] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:57:16] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:57:16] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:57:37] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:57:37] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:57:37] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:57:49] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:57:49] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:57:50] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:58:02] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:58:02] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 15:58:02] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:02:56] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:02:56] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:02:56] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:03:27] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:03:27] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:03:27] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:03:56] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:03:56] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:03:56] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:04:36] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:04:37] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:04:37] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:04:57] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:04:57] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:04:57] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:05:13] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:05:13] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:05:13] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:06:55] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:06:56] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:06:56] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:07:01] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:07:01] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:07:01] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:09:37] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:09:37] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:09:37] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:10:05] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:10:05] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:10:05] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:11:23] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:11:23] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:11:23] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:11:27] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:11:27] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [07/Aug/2023 16:11:27] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
+      "127.0.0.1 - - [20/Aug/2023 12:08:05] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/Aug/2023 12:08:05] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [20/Aug/2023 12:08:05] \"GET /static/css/main.css HTTP/1.1\" 304 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 10s 10s/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [20/Aug/2023 12:08:52] \"POST /predict HTTP/1.1\" 200 -\n"
      ]
     }
    ],
