--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,25 +20,11 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [20/Aug/2023 13:24:56] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [20/Aug/2023 13:24:57] \"GET /static/js/script.js HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [20/Aug/2023 13:24:57] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [20/Aug/2023 13:24:58] \"GET /static//css/main.css HTTP/1.1\" 308 -\n",
-      "127.0.0.1 - - [20/Aug/2023 13:24:58] \"GET /static/css/main.css HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 3s 3s/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [20/Aug/2023 13:25:21] \"POST /predict HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [20/Aug/2023 13:52:40] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/Aug/2023 13:52:41] \"GET /static/js/script.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [20/Aug/2023 13:52:41] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [20/Aug/2023 13:52:41] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [20/Aug/2023 13:52:41] \"GET /static/css/main.css HTTP/1.1\" 304 -\n"
      ]
     }
    ],
